documentacion en javadoc

--- a/example.env
+++ b/example.env
@@ -15,12 +15,12 @@ DB_USER={a determinar}
 DB_PASSWORD={a determinar}
 DB_NAME={a determinar}
 
-# Define las URL que van a tener permiso al backend {ORIGIN1, ORIGIN2, ORIGIN3, etc.}.
+# Define las URL que van a tener aceeso al backend {ORIGIN1, ORIGIN2, ORIGIN3, etc.}.
 ORIGIN1={a determinar}
 
 # Clave secreta para el token.
 SECRET_KEY={a determinar}
 
-# Definir cuenta de gmail y contraseña para recuperar la constraseña.
+# Definir cuenta de gmail y contraseña de app (datos para recuperar la constraseña).
 EMAIL_USER={a determinar}
 EMAIL_PASS={a determinar}
