--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "ngrok": "^5.0.0-beta.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
